--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,6 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
     "paths": {
       "@app/common": [
         "libs/common/src"
@@ -24,6 +17,17 @@
       "@app/common/*": [
         "libs/common/src/*"
       ]
-    }
-  }
+    },
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  },
+  "include": [
+    "apps/**/*",
+    "libs/**/*"
+  ]
 }
