--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/sleepr/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/sleepr/test/jest-e2e.json",
+    "migration:create": "pnpm typeorm migration:create",
+    "premigration:generate": "pnpm build",
+    "migration:generate": "pnpm typeorm migration:generate -d dist/libs/common/src/database/data-source -p",
+    "premigration:run": "pnpm build",
+    "migration:run": "pnpm typeorm migration:run -d dist/libs/common/src/database/data-source",
+    "migration:revert": "pnpm typeorm migration:revert -d dist/libs/common/src/database/data-source"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -45,6 +51,7 @@
     "nestjs-pino": "^4.1.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.13.1",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
@@ -71,7 +78,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
