--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/sleepr/test/jest-e2e.json",
-    "migration:create": "pnpm typeorm migration:create",
-    "premigration:generate": "pnpm build",
-    "migration:generate": "pnpm typeorm migration:generate -d dist/libs/common/src/database/data-source -p",
-    "premigration:run": "pnpm build",
-    "migration:run": "pnpm typeorm migration:run -d dist/libs/common/src/database/data-source",
-    "migration:revert": "pnpm typeorm migration:revert -d dist/libs/common/src/database/data-source"
+    "migration:create": "yarn typeorm migration:create",
+    "premigration:generate": "yarn build",
+    "migration:generate": "yarn typeorm migration:generate -d dist/libs/common/src/database/data-source -p",
+    "premigration:run": "yarn build",
+    "migration:run": "yarn typeorm migration:run -d dist/libs/common/src/database/data-source",
+    "migration:revert": "yarn typeorm migration:revert -d dist/libs/common/src/database/data-source"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -54,6 +54,7 @@
     "pg": "^8.13.1",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0",
+    "yarn": "^9.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
