--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,44 +1,40 @@
-# Étape de développement
-FROM node:18-alpine AS development
+FROM node:alpine AS development
 
-# Définir le répertoire de travail
 WORKDIR /usr/src/app
 
-# Copier les fichiers nécessaires pour installer les dépendances
-COPY package.json pnpm-lock.yaml ./
+COPY package.json ./
+COPY pnpm-lock.yaml ./
+COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
-# Installer PNPM globalement
 RUN npm install -g pnpm
 
-# Installer toutes les dépendances (dev + prod)
-RUN pnpm install -r
+RUN pnpm install
 
-# Copier le reste des fichiers nécessaires pour la compilation
-COPY tsconfig.json nest-cli.json ./
-COPY apps/auth ./apps/auth
-COPY libs ./libs
+COPY apps/auth apps/auth
+COPY libs libs
 
-# Compiler l'application
+RUN cd apps/auth && pnpm install
+
 RUN pnpm run build auth
 
-# Étape de production
-FROM node:18-alpine AS production
+FROM node:alpine as production
 
-# Définir la variable d'environnement
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-# Définir le répertoire de travail
 WORKDIR /usr/src/app
 
-# Copier uniquement les fichiers nécessaires pour exécuter l'application
-COPY package.json pnpm-lock.yaml ./
-COPY --from=development /usr/src/app/dist ./dist
-COPY --from=development /usr/src/app/node_modules ./node_modules
+COPY package.json ./
+COPY pnpm-lock.yaml ./
 
-RUN npm install -g pnpm
+RUN npm install -g pnpm 
 
 RUN pnpm install --prod
 
-# Commande pour démarrer l'application
+WORKDIR /usr/src/app/apps/auth
+RUN pnpm install --prod
+
+COPY --from=development /usr/src/app/dist ./dist
+
 CMD ["node", "dist/apps/auth/main"]
