--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,21 @@
 services:
+  auth:
+    build:
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+      target: development
+    command: pnpm run start:dev auth
+    env_file:
+      - ./apps/auth/.env
+    ports:
+      - '3001:3001'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
   database:
     image: postgres
     restart: always
     ports:
-      - "${DATASOURCE_PORT}:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      - "5432:5432"
+    env_file:
+      - .env
