--- a/package.json
+++ b/package.json
@@ -18,26 +18,23 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/sleepr/test/jest-e2e.json",
-    "migration:create": "yarn typeorm migration:create",
-    "premigration:generate": "yarn build",
-    "migration:generate": "yarn typeorm migration:generate -d dist/libs/common/src/database/data-source -p",
-    "premigration:run": "yarn build",
-    "migration:run": "yarn typeorm migration:run -d dist/libs/common/src/database/data-source",
-    "migration:revert": "yarn typeorm migration:revert -d dist/libs/common/src/database/data-source"
+    "migration:create": "pnpm typeorm migration:create",
+    "premigration:generate": "pnpm build",
+    "migration:generate": "pnpm typeorm migration:generate -d dist/libs/common/src/database/data-source -p",
+    "premigration:run": "pnpm build",
+    "migration:run": "pnpm typeorm migration:run -d dist/libs/common/src/database/data-source",
+    "migration:revert": "pnpm typeorm migration:revert -d dist/libs/common/src/database/data-source"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.1.0",
-    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@nestjs/typeorm": "^10.0.2",
-    "bcrypt": "^5.1.1",
     "bytes": "^3.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -49,15 +46,21 @@
     "mime-types": "^2.1.35",
     "mongoose": "^8.9.0",
     "nestjs-pino": "^4.1.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0",
-    "yarn": "^9.15.1",
+    "pnpm": "^9.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "yarn": "^1.22.22",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/passport": "^9.0.0",
+    "bcryptjs": "^2.4.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "bcrypt": "^5.1.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
@@ -81,7 +84,11 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/passport-local": "^1.0.35"
   },
   "jest": {
     "moduleFileExtensions": [
