--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,28 @@ services:
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: pnpm run start:dev payments
+    env_file:
+      - ./apps/payments/.env
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+  notifications:
+    build:
+      context: .
+      dockerfile: ./apps/notifications/Dockerfile
+      target: development
+    command: pnpm run start:dev notifications
+    env_file:
+      - ./apps/notifications/.env
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
   database:
     image: postgres
     restart: always
